src/core/gaffParse.output
Terminals which are not used

   APError
   APOperatorNot


Grammar

    0 $accept: antechamberMatch $end

    1 antechamberMatch: APAtomTypeDefinition antechamberLine

    2 antechamberLine: typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty chemicalEnvironment bondDefinitions APEndOfLine
    3                | typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty chemicalEnvironment APEndOfLine
    4                | typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty APEndOfLine
    5                | typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms APEndOfLine
    6                | typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms APEndOfLine
    7                | typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms APEndOfLine
    8                | typeName residueList focusAtomicNumber APEndOfLine
    9                | typeName residueList APEndOfLine
   10                | typeName APEndOfLine

   11 typeName: tagOrElement
   12         | tagOrElement APOperatorOr APNumber
   13         | tagOrElement APOperatorOr APNumber tagOrElement
   14         | tagOrElement APOperatorOr tagOrElement

   15 tagOrElement: APTag
   16             | APElement

   17 residueList: APWildCard

   18 focusAtomicNumber: APWildCard
   19                  | APNumber

   20 focusNumberOfAttachedAtoms: APWildCard
   21                           | APNumber

   22 focusNumberOfAttachedHydrogenAtoms: APWildCard
   23                                   | APNumber

   24 focusNumberOfElectronWithdrawingAtoms: APWildCard
   25                                      | APNumber

   26 bracketedAtomicProperty: APWildCard
   27                        | APOpenBracket logOp APCloseBracket

   28 chemicalEnvironment: APWildCard
   29                    | branches

   30 bondDefinitions: APTag APColon APTag APColon APBond

   31 logOp: atomicTest
   32      | logOp APOperatorAnd logOp
   33      | logOp APOperatorOr logOp

   34 atomicTest: APBond
   35           | APNumber APBond
   36           | APBond APNotBondedToPrevious
   37           | APBond APBondedToPrevious
   38           | APAntechamberARLevel
   39           | APAntechamberRingMembership
   40           | APAntechamberRingMembership APNumber
   41           | APNumber APAntechamberRingMembership APNumber
   42           | APAntechamberNoRingMembership

   43 branches: APOpenParenthesis branchesList APCloseParenthesis

   44 branchesList: chain
   45             | branchesList APOperatorAnd chain

   46 chain: chemicalEnvironmentAtom
   47      | chemicalEnvironmentAtom branches

   48 chemicalEnvironmentAtom: element APNumber bracketedAtomPropertyOrNull tagNameOrNull
   49                        | element bracketedAtomPropertyOrNull tagNameOrNull

   50 element: APElement
   51        | APElementWildCard

   52 bracketedAtomPropertyOrNull: /* empty */
   53                            | APOpenBracket logOp APCloseBracket

   54 tagNameOrNull: /* empty */
   55              | APOpenAngleBracket APTag APCloseAngleBracket


Terminals, with rules where they appear

$end (0) 0
error (256)
APEndOfLine (258) 2 3 4 5 6 7 8 9 10
APElement (259) 16 50
APElementWildCard (260) 51
APWildCard (261) 17 18 20 22 24 26 28
APOpenParenthesis (262) 43
APCloseParenthesis (263) 43
APOpenBracket (264) 27 53
APOpenAngleBracket (265) 55
APCloseBracket (266) 27 53
APCloseAngleBracket (267) 55
APOperatorAnd (268) 32 45
APOperatorOr (269) 12 13 14 33
APColon (270) 30
APAntechamberARLevel (271) 38
APAntechamberRingMembership (272) 39 40 41
APAntechamberNoRingMembership (273) 42
APBond (274) 30 34 35 36 37
APNumber (275) 12 13 19 21 23 25 35 40 41 48
APTag (276) 15 30 55
APError (277)
APNotBondedToPrevious (278) 36
APBondedToPrevious (279) 37
APAtomTypeDefinition (280) 1
APOperatorNot (281)


Nonterminals, with rules where they appear

$accept (27)
    on left: 0
antechamberMatch (28)
    on left: 1, on right: 0
antechamberLine (29)
    on left: 2 3 4 5 6 7 8 9 10, on right: 1
typeName (30)
    on left: 11 12 13 14, on right: 2 3 4 5 6 7 8 9 10
tagOrElement (31)
    on left: 15 16, on right: 11 12 13 14
residueList (32)
    on left: 17, on right: 2 3 4 5 6 7 8 9
focusAtomicNumber (33)
    on left: 18 19, on right: 2 3 4 5 6 7 8
focusNumberOfAttachedAtoms (34)
    on left: 20 21, on right: 2 3 4 5 6 7
focusNumberOfAttachedHydrogenAtoms (35)
    on left: 22 23, on right: 2 3 4 5 6
focusNumberOfElectronWithdrawingAtoms (36)
    on left: 24 25, on right: 2 3 4 5
bracketedAtomicProperty (37)
    on left: 26 27, on right: 2 3 4
chemicalEnvironment (38)
    on left: 28 29, on right: 2 3
bondDefinitions (39)
    on left: 30, on right: 2
logOp (40)
    on left: 31 32 33, on right: 27 32 33 53
atomicTest (41)
    on left: 34 35 36 37 38 39 40 41 42, on right: 31
branches (42)
    on left: 43, on right: 29 47
branchesList (43)
    on left: 44 45, on right: 43 45
chain (44)
    on left: 46 47, on right: 44 45
chemicalEnvironmentAtom (45)
    on left: 48 49, on right: 46 47
element (46)
    on left: 50 51, on right: 48 49
bracketedAtomPropertyOrNull (47)
    on left: 52 53, on right: 48 49
tagNameOrNull (48)
    on left: 54 55, on right: 48 49


state 0

    0 $accept: . antechamberMatch $end

    APAtomTypeDefinition  shift, and go to state 1

    antechamberMatch  go to state 2


state 1

    1 antechamberMatch: APAtomTypeDefinition . antechamberLine

    APElement  shift, and go to state 3
    APTag      shift, and go to state 4

    antechamberLine  go to state 5
    typeName         go to state 6
    tagOrElement     go to state 7


state 2

    0 $accept: antechamberMatch . $end

    $end  shift, and go to state 8


state 3

   16 tagOrElement: APElement .

    $default  reduce using rule 16 (tagOrElement)


state 4

   15 tagOrElement: APTag .

    $default  reduce using rule 15 (tagOrElement)


state 5

    1 antechamberMatch: APAtomTypeDefinition antechamberLine .

    $default  reduce using rule 1 (antechamberMatch)


state 6

    2 antechamberLine: typeName . residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty chemicalEnvironment bondDefinitions APEndOfLine
    3                | typeName . residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty chemicalEnvironment APEndOfLine
    4                | typeName . residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty APEndOfLine
    5                | typeName . residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms APEndOfLine
    6                | typeName . residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms APEndOfLine
    7                | typeName . residueList focusAtomicNumber focusNumberOfAttachedAtoms APEndOfLine
    8                | typeName . residueList focusAtomicNumber APEndOfLine
    9                | typeName . residueList APEndOfLine
   10                | typeName . APEndOfLine

    APEndOfLine  shift, and go to state 9
    APWildCard   shift, and go to state 10

    residueList  go to state 11


state 7

   11 typeName: tagOrElement .
   12         | tagOrElement . APOperatorOr APNumber
   13         | tagOrElement . APOperatorOr APNumber tagOrElement
   14         | tagOrElement . APOperatorOr tagOrElement

    APOperatorOr  shift, and go to state 12

    $default  reduce using rule 11 (typeName)


state 8

    0 $accept: antechamberMatch $end .

    $default  accept


state 9

   10 antechamberLine: typeName APEndOfLine .

    $default  reduce using rule 10 (antechamberLine)


state 10

   17 residueList: APWildCard .

    $default  reduce using rule 17 (residueList)


state 11

    2 antechamberLine: typeName residueList . focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty chemicalEnvironment bondDefinitions APEndOfLine
    3                | typeName residueList . focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty chemicalEnvironment APEndOfLine
    4                | typeName residueList . focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty APEndOfLine
    5                | typeName residueList . focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms APEndOfLine
    6                | typeName residueList . focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms APEndOfLine
    7                | typeName residueList . focusAtomicNumber focusNumberOfAttachedAtoms APEndOfLine
    8                | typeName residueList . focusAtomicNumber APEndOfLine
    9                | typeName residueList . APEndOfLine

    APEndOfLine  shift, and go to state 13
    APWildCard   shift, and go to state 14
    APNumber     shift, and go to state 15

    focusAtomicNumber  go to state 16


state 12

   12 typeName: tagOrElement APOperatorOr . APNumber
   13         | tagOrElement APOperatorOr . APNumber tagOrElement
   14         | tagOrElement APOperatorOr . tagOrElement

    APElement  shift, and go to state 3
    APNumber   shift, and go to state 17
    APTag      shift, and go to state 4

    tagOrElement  go to state 18


state 13

    9 antechamberLine: typeName residueList APEndOfLine .

    $default  reduce using rule 9 (antechamberLine)


state 14

   18 focusAtomicNumber: APWildCard .

    $default  reduce using rule 18 (focusAtomicNumber)


state 15

   19 focusAtomicNumber: APNumber .

    $default  reduce using rule 19 (focusAtomicNumber)


state 16

    2 antechamberLine: typeName residueList focusAtomicNumber . focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty chemicalEnvironment bondDefinitions APEndOfLine
    3                | typeName residueList focusAtomicNumber . focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty chemicalEnvironment APEndOfLine
    4                | typeName residueList focusAtomicNumber . focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty APEndOfLine
    5                | typeName residueList focusAtomicNumber . focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms APEndOfLine
    6                | typeName residueList focusAtomicNumber . focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms APEndOfLine
    7                | typeName residueList focusAtomicNumber . focusNumberOfAttachedAtoms APEndOfLine
    8                | typeName residueList focusAtomicNumber . APEndOfLine

    APEndOfLine  shift, and go to state 19
    APWildCard   shift, and go to state 20
    APNumber     shift, and go to state 21

    focusNumberOfAttachedAtoms  go to state 22


state 17

   12 typeName: tagOrElement APOperatorOr APNumber .
   13         | tagOrElement APOperatorOr APNumber . tagOrElement

    APElement  shift, and go to state 3
    APTag      shift, and go to state 4

    $default  reduce using rule 12 (typeName)

    tagOrElement  go to state 23


state 18

   14 typeName: tagOrElement APOperatorOr tagOrElement .

    $default  reduce using rule 14 (typeName)


state 19

    8 antechamberLine: typeName residueList focusAtomicNumber APEndOfLine .

    $default  reduce using rule 8 (antechamberLine)


state 20

   20 focusNumberOfAttachedAtoms: APWildCard .

    $default  reduce using rule 20 (focusNumberOfAttachedAtoms)


state 21

   21 focusNumberOfAttachedAtoms: APNumber .

    $default  reduce using rule 21 (focusNumberOfAttachedAtoms)


state 22

    2 antechamberLine: typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms . focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty chemicalEnvironment bondDefinitions APEndOfLine
    3                | typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms . focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty chemicalEnvironment APEndOfLine
    4                | typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms . focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty APEndOfLine
    5                | typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms . focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms APEndOfLine
    6                | typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms . focusNumberOfAttachedHydrogenAtoms APEndOfLine
    7                | typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms . APEndOfLine

    APEndOfLine  shift, and go to state 24
    APWildCard   shift, and go to state 25
    APNumber     shift, and go to state 26

    focusNumberOfAttachedHydrogenAtoms  go to state 27


state 23

   13 typeName: tagOrElement APOperatorOr APNumber tagOrElement .

    $default  reduce using rule 13 (typeName)


state 24

    7 antechamberLine: typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms APEndOfLine .

    $default  reduce using rule 7 (antechamberLine)


state 25

   22 focusNumberOfAttachedHydrogenAtoms: APWildCard .

    $default  reduce using rule 22 (focusNumberOfAttachedHydrogenAtoms)


state 26

   23 focusNumberOfAttachedHydrogenAtoms: APNumber .

    $default  reduce using rule 23 (focusNumberOfAttachedHydrogenAtoms)


state 27

    2 antechamberLine: typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms . focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty chemicalEnvironment bondDefinitions APEndOfLine
    3                | typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms . focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty chemicalEnvironment APEndOfLine
    4                | typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms . focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty APEndOfLine
    5                | typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms . focusNumberOfElectronWithdrawingAtoms APEndOfLine
    6                | typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms . APEndOfLine

    APEndOfLine  shift, and go to state 28
    APWildCard   shift, and go to state 29
    APNumber     shift, and go to state 30

    focusNumberOfElectronWithdrawingAtoms  go to state 31


state 28

    6 antechamberLine: typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms APEndOfLine .

    $default  reduce using rule 6 (antechamberLine)


state 29

   24 focusNumberOfElectronWithdrawingAtoms: APWildCard .

    $default  reduce using rule 24 (focusNumberOfElectronWithdrawingAtoms)


state 30

   25 focusNumberOfElectronWithdrawingAtoms: APNumber .

    $default  reduce using rule 25 (focusNumberOfElectronWithdrawingAtoms)


state 31

    2 antechamberLine: typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms . bracketedAtomicProperty chemicalEnvironment bondDefinitions APEndOfLine
    3                | typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms . bracketedAtomicProperty chemicalEnvironment APEndOfLine
    4                | typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms . bracketedAtomicProperty APEndOfLine
    5                | typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms . APEndOfLine

    APEndOfLine    shift, and go to state 32
    APWildCard     shift, and go to state 33
    APOpenBracket  shift, and go to state 34

    bracketedAtomicProperty  go to state 35


state 32

    5 antechamberLine: typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms APEndOfLine .

    $default  reduce using rule 5 (antechamberLine)


state 33

   26 bracketedAtomicProperty: APWildCard .

    $default  reduce using rule 26 (bracketedAtomicProperty)


state 34

   27 bracketedAtomicProperty: APOpenBracket . logOp APCloseBracket

    APAntechamberARLevel           shift, and go to state 36
    APAntechamberRingMembership    shift, and go to state 37
    APAntechamberNoRingMembership  shift, and go to state 38
    APBond                         shift, and go to state 39
    APNumber                       shift, and go to state 40

    logOp       go to state 41
    atomicTest  go to state 42


state 35

    2 antechamberLine: typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty . chemicalEnvironment bondDefinitions APEndOfLine
    3                | typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty . chemicalEnvironment APEndOfLine
    4                | typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty . APEndOfLine

    APEndOfLine        shift, and go to state 43
    APWildCard         shift, and go to state 44
    APOpenParenthesis  shift, and go to state 45

    chemicalEnvironment  go to state 46
    branches             go to state 47


state 36

   38 atomicTest: APAntechamberARLevel .

    $default  reduce using rule 38 (atomicTest)


state 37

   39 atomicTest: APAntechamberRingMembership .
   40           | APAntechamberRingMembership . APNumber

    APNumber  shift, and go to state 48

    $default  reduce using rule 39 (atomicTest)


state 38

   42 atomicTest: APAntechamberNoRingMembership .

    $default  reduce using rule 42 (atomicTest)


state 39

   34 atomicTest: APBond .
   36           | APBond . APNotBondedToPrevious
   37           | APBond . APBondedToPrevious

    APNotBondedToPrevious  shift, and go to state 49
    APBondedToPrevious     shift, and go to state 50

    $default  reduce using rule 34 (atomicTest)


state 40

   35 atomicTest: APNumber . APBond
   41           | APNumber . APAntechamberRingMembership APNumber

    APAntechamberRingMembership  shift, and go to state 51
    APBond                       shift, and go to state 52


state 41

   27 bracketedAtomicProperty: APOpenBracket logOp . APCloseBracket
   32 logOp: logOp . APOperatorAnd logOp
   33      | logOp . APOperatorOr logOp

    APCloseBracket  shift, and go to state 53
    APOperatorAnd   shift, and go to state 54
    APOperatorOr    shift, and go to state 55


state 42

   31 logOp: atomicTest .

    $default  reduce using rule 31 (logOp)


state 43

    4 antechamberLine: typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty APEndOfLine .

    $default  reduce using rule 4 (antechamberLine)


state 44

   28 chemicalEnvironment: APWildCard .

    $default  reduce using rule 28 (chemicalEnvironment)


state 45

   43 branches: APOpenParenthesis . branchesList APCloseParenthesis

    APElement          shift, and go to state 56
    APElementWildCard  shift, and go to state 57

    branchesList             go to state 58
    chain                    go to state 59
    chemicalEnvironmentAtom  go to state 60
    element                  go to state 61


state 46

    2 antechamberLine: typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty chemicalEnvironment . bondDefinitions APEndOfLine
    3                | typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty chemicalEnvironment . APEndOfLine

    APEndOfLine  shift, and go to state 62
    APTag        shift, and go to state 63

    bondDefinitions  go to state 64


state 47

   29 chemicalEnvironment: branches .

    $default  reduce using rule 29 (chemicalEnvironment)


state 48

   40 atomicTest: APAntechamberRingMembership APNumber .

    $default  reduce using rule 40 (atomicTest)


state 49

   36 atomicTest: APBond APNotBondedToPrevious .

    $default  reduce using rule 36 (atomicTest)


state 50

   37 atomicTest: APBond APBondedToPrevious .

    $default  reduce using rule 37 (atomicTest)


state 51

   41 atomicTest: APNumber APAntechamberRingMembership . APNumber

    APNumber  shift, and go to state 65


state 52

   35 atomicTest: APNumber APBond .

    $default  reduce using rule 35 (atomicTest)


state 53

   27 bracketedAtomicProperty: APOpenBracket logOp APCloseBracket .

    $default  reduce using rule 27 (bracketedAtomicProperty)


state 54

   32 logOp: logOp APOperatorAnd . logOp

    APAntechamberARLevel           shift, and go to state 36
    APAntechamberRingMembership    shift, and go to state 37
    APAntechamberNoRingMembership  shift, and go to state 38
    APBond                         shift, and go to state 39
    APNumber                       shift, and go to state 40

    logOp       go to state 66
    atomicTest  go to state 42


state 55

   33 logOp: logOp APOperatorOr . logOp

    APAntechamberARLevel           shift, and go to state 36
    APAntechamberRingMembership    shift, and go to state 37
    APAntechamberNoRingMembership  shift, and go to state 38
    APBond                         shift, and go to state 39
    APNumber                       shift, and go to state 40

    logOp       go to state 67
    atomicTest  go to state 42


state 56

   50 element: APElement .

    $default  reduce using rule 50 (element)


state 57

   51 element: APElementWildCard .

    $default  reduce using rule 51 (element)


state 58

   43 branches: APOpenParenthesis branchesList . APCloseParenthesis
   45 branchesList: branchesList . APOperatorAnd chain

    APCloseParenthesis  shift, and go to state 68
    APOperatorAnd       shift, and go to state 69


state 59

   44 branchesList: chain .

    $default  reduce using rule 44 (branchesList)


state 60

   46 chain: chemicalEnvironmentAtom .
   47      | chemicalEnvironmentAtom . branches

    APOpenParenthesis  shift, and go to state 45

    $default  reduce using rule 46 (chain)

    branches  go to state 70


state 61

   48 chemicalEnvironmentAtom: element . APNumber bracketedAtomPropertyOrNull tagNameOrNull
   49                        | element . bracketedAtomPropertyOrNull tagNameOrNull

    APOpenBracket  shift, and go to state 71
    APNumber       shift, and go to state 72

    $default  reduce using rule 52 (bracketedAtomPropertyOrNull)

    bracketedAtomPropertyOrNull  go to state 73


state 62

    3 antechamberLine: typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty chemicalEnvironment APEndOfLine .

    $default  reduce using rule 3 (antechamberLine)


state 63

   30 bondDefinitions: APTag . APColon APTag APColon APBond

    APColon  shift, and go to state 74


state 64

    2 antechamberLine: typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty chemicalEnvironment bondDefinitions . APEndOfLine

    APEndOfLine  shift, and go to state 75


state 65

   41 atomicTest: APNumber APAntechamberRingMembership APNumber .

    $default  reduce using rule 41 (atomicTest)


state 66

   32 logOp: logOp . APOperatorAnd logOp
   32      | logOp APOperatorAnd logOp .
   33      | logOp . APOperatorOr logOp

    APOperatorOr  shift, and go to state 55

    $default  reduce using rule 32 (logOp)


state 67

   32 logOp: logOp . APOperatorAnd logOp
   33      | logOp . APOperatorOr logOp
   33      | logOp APOperatorOr logOp .

    $default  reduce using rule 33 (logOp)


state 68

   43 branches: APOpenParenthesis branchesList APCloseParenthesis .

    $default  reduce using rule 43 (branches)


state 69

   45 branchesList: branchesList APOperatorAnd . chain

    APElement          shift, and go to state 56
    APElementWildCard  shift, and go to state 57

    chain                    go to state 76
    chemicalEnvironmentAtom  go to state 60
    element                  go to state 61


state 70

   47 chain: chemicalEnvironmentAtom branches .

    $default  reduce using rule 47 (chain)


state 71

   53 bracketedAtomPropertyOrNull: APOpenBracket . logOp APCloseBracket

    APAntechamberARLevel           shift, and go to state 36
    APAntechamberRingMembership    shift, and go to state 37
    APAntechamberNoRingMembership  shift, and go to state 38
    APBond                         shift, and go to state 39
    APNumber                       shift, and go to state 40

    logOp       go to state 77
    atomicTest  go to state 42


state 72

   48 chemicalEnvironmentAtom: element APNumber . bracketedAtomPropertyOrNull tagNameOrNull

    APOpenBracket  shift, and go to state 71

    $default  reduce using rule 52 (bracketedAtomPropertyOrNull)

    bracketedAtomPropertyOrNull  go to state 78


state 73

   49 chemicalEnvironmentAtom: element bracketedAtomPropertyOrNull . tagNameOrNull

    APOpenAngleBracket  shift, and go to state 79

    $default  reduce using rule 54 (tagNameOrNull)

    tagNameOrNull  go to state 80


state 74

   30 bondDefinitions: APTag APColon . APTag APColon APBond

    APTag  shift, and go to state 81


state 75

    2 antechamberLine: typeName residueList focusAtomicNumber focusNumberOfAttachedAtoms focusNumberOfAttachedHydrogenAtoms focusNumberOfElectronWithdrawingAtoms bracketedAtomicProperty chemicalEnvironment bondDefinitions APEndOfLine .

    $default  reduce using rule 2 (antechamberLine)


state 76

   45 branchesList: branchesList APOperatorAnd chain .

    $default  reduce using rule 45 (branchesList)


state 77

   32 logOp: logOp . APOperatorAnd logOp
   33      | logOp . APOperatorOr logOp
   53 bracketedAtomPropertyOrNull: APOpenBracket logOp . APCloseBracket

    APCloseBracket  shift, and go to state 82
    APOperatorAnd   shift, and go to state 54
    APOperatorOr    shift, and go to state 55


state 78

   48 chemicalEnvironmentAtom: element APNumber bracketedAtomPropertyOrNull . tagNameOrNull

    APOpenAngleBracket  shift, and go to state 79

    $default  reduce using rule 54 (tagNameOrNull)

    tagNameOrNull  go to state 83


state 79

   55 tagNameOrNull: APOpenAngleBracket . APTag APCloseAngleBracket

    APTag  shift, and go to state 84


state 80

   49 chemicalEnvironmentAtom: element bracketedAtomPropertyOrNull tagNameOrNull .

    $default  reduce using rule 49 (chemicalEnvironmentAtom)


state 81

   30 bondDefinitions: APTag APColon APTag . APColon APBond

    APColon  shift, and go to state 85


state 82

   53 bracketedAtomPropertyOrNull: APOpenBracket logOp APCloseBracket .

    $default  reduce using rule 53 (bracketedAtomPropertyOrNull)


state 83

   48 chemicalEnvironmentAtom: element APNumber bracketedAtomPropertyOrNull tagNameOrNull .

    $default  reduce using rule 48 (chemicalEnvironmentAtom)


state 84

   55 tagNameOrNull: APOpenAngleBracket APTag . APCloseAngleBracket

    APCloseAngleBracket  shift, and go to state 86


state 85

   30 bondDefinitions: APTag APColon APTag APColon . APBond

    APBond  shift, and go to state 87


state 86

   55 tagNameOrNull: APOpenAngleBracket APTag APCloseAngleBracket .

    $default  reduce using rule 55 (tagNameOrNull)


state 87

   30 bondDefinitions: APTag APColon APTag APColon APBond .

    $default  reduce using rule 30 (bondDefinitions)
